# x029

./: LICENSE.md  README.md
src/: .gitignore  Makefile.in  Makefile.obj.in  arrow.xpm  ascii_hollerith.h  audio.c  card_collins.xpm  card_pink.xpm  cardimg.c  cardimg.h  cardimg_menu.c  cardimg_menu.h  charset.c  charset.h  charset_menu.c  charset_menu.h  conf.h  conf.h.in  configure  configure.in  eventq.c  eventq.h  flipper_off.xpm  jones.h  off60.xpm  paste.c  paste.h  rel.xpm  save.c  save.h  save.xpm  save_pressed.xpm  x029.bm  x029.c  x029.h  x029.man
x026/: .gitignore  Imakefile  Makefile  Makefile.aux  README  arrow.xpm  card_cmu.xpm  card_harvard.xpm  card_ibm.xpm  card_pink.xpm  cardimg.c  cardimg.h  cardimg_menu.c  cardimg_menu.h  cardmenu_cmu.xpm  cardmenu_collins.xpm  cardmenu_harvard.xpm  carnegie2.xpm  charset.c  charset.h  charset_menu.c  ci2.xpm  collins.xpm  drop.xpm  drop_pressed.xpm  eventq.c  eventq.h  feed.xpm  flipper_on.xpm  harvard.xpm  ibm.xpm  jones.h  off60.xpm  on60.xpm  paste.c  paste.h  pink.xpm  red_off.xpm  red_on.xpm  save.c  (+5 more)
x029/: .gitignore  Makefile.aux  README  audio.c  card_harvard.xpm  cardimg.c  cardimg.h  cardimg_menu.c  cardimg_menu.h  cardmenu_ibm.xpm  cardmenu_pink.xpm  charset.h  charset.xpm  charset_menu.h  ci2.xpm  eventq.h  feed_pressed.xpm  paste.h  rel_pressed.xpm  save.c  save.h  x029.c
